[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "blogdecafe"
version = "0.1.0"
description = "Utilities for the Blog de Café project"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
addopts = "-q"
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
]
